[project]
name = "self-healing-cicd"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "langchain-core>=0.2.0",
    "langgraph>=0.1.0",
    "langchain-anthropic>=0.1.15",
]

[project.optional-dependencies]
ollama = ["langchain-ollama>=0.1.0"]
openai = ["langchain-openai>=0.1.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "config", "notifier", "sandbox", "storage", "tools", "webhook"]

[tool.uv]
dev-dependencies = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]
